# kiboai

./: .dockerignore  .gitignore  .secrets.baseline  404.html  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  test_ray_client.py
.github/workflows/: publish-testpypi.yml
concepts/: index.html
docs/: CNAME  concepts.md  getting-started.md  index.md
docs/examples/: a2a.md  basics.md  distributed.md  frameworks.md  observability.md  parallel.md  prompt-versioning.md  proxy.md  simple-agents.md  use-cases.md  workflows.md
docs/user-guide/: basic-usage.md  distributed.md  frameworks.md  gateway.md
examples/: agno_openai_example.py  agno_tool_example.py  blueprint_example.py  crewai_example.py  crewai_openai_example.py  crewai_tool_example.py  langchain_example.py  langchain_openai_example.py  langchain_tool_example.py  langgraph_openai_example.py  parallel_execution_example.py  proxy_advanced_example.py  proxy_config.yaml  proxy_example.py  pydantic_ai_openai_example.py  pydantic_ai_tool_example.py
examples/a2a/: client_example.py  index.html  server_example.py
examples/basics/: blueprint_example.py  index.html
examples/distributed/: distributed_declarative_example.py  distributed_imperative_example.py  index.html  parallel_execution_example.py
examples/frameworks/: index.html
examples/observability/: index.html  langfuse_example.py
examples/parallel/: index.html
examples/prompt-versioning/: index.html
examples/prompt_versioning/: prompt_versioning_example.py
examples/proxy/: index.html  proxy_advanced_example.py  proxy_config.yaml  proxy_example.py
examples/simple-agents/: index.html
examples/use-cases/: index.html
examples/use_case/: finance_workflow.py  memory_chat_example.py
examples/workflows/: agno_team_example.py  agno_workflow_example.py  agno_workflow_translation.py  crewai_declarative_example.py  declarative_workflow_example.py  index.html  native_extensions_example.py  workflow_native_gemini_example.py
getting-started/: index.html
scripts/: verify_examples.py  verify_examples_pypi.py
search/: search_index.json
src/kibo_core/: __init__.py  cli.py  client.py
src/kiboai/: __init__.py
use_case/: finance_workflow.py
user-guide/basic-usage/: index.html
user-guide/distributed/: index.html
(+82 files in other folders)
