[project]
name = "kiboai"
version = "0.1.0"
description = "Universal Distributed Agent Framework"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Core Distributed computing
ray = [
    "ray[default]>=2.53.0",
]

# Agent Frameworks
agno = [
    "agno>=2.4.8",
]
crewai = [
    "crewai>=0.80.0",
    "crewai-tools>=0.76.0",
]
langchain = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.1.0",
]
langgraph = [
    "langgraph>=0.2.0",
]
pydantic-ai = [
    "pydantic-ai>=0.4.3",
]

# Tools & Infrastructure
proxy = [
    "litellm[proxy]>=1.61.0",
]
web = [
    "duckduckgo-search<7.0.0",
    "tavily-python>=0.7.21",
]
finance = [
    "yfinance>=0.2.0",
]
vector-db = [
    "chromadb>=0.4.0",
]
observability = [
    "langfuse>=2.0.0",
]
memory = [
    "mem0ai>=1.0.3",
]

# Development & Documentation
dev = [
    "black>=24.0.0",
    "detect-secrets>=1.4.0",
    "pytest>=8.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

# Meta-packages
all = [
    "kibo-core[ray,agno,crewai,langchain,langgraph,pydantic-ai,proxy,web,finance,vector-db,observability,memory]",
]

[project.scripts]
kibo = "kibo_core.infrastructure.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kibo_core"]
